fix the navbar positioned too high problem at mobile screen

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,6 +13,10 @@ header{
             justify-content: space-between;
             position: relative;
             padding: 0 1rem;
+
+            @include mobile {
+                padding: 0.8rem 1rem 0;
+            }
     
             .logo{
                 a {
